# one_week

./: .gitignore  CMakeLists.txt  plot.py  readme.md
config/: data.txt  data2.txt
config/two_image_pose_estimation/: sensor.yaml
eigen_utility/: CMakeLists.txt
eigen_utility/include/: eigen_utility.h
eigen_utility/src/: eigen_utility.cpp
include/: opencv_utility.h
include/factor/: pose_local_parameterization.h  projection.h  utility.h
src/: main.cpp  opencv_utility.cpp
src/factor/: pose_local_parameterization.cpp  projection.cpp
